Got the CSS grid working

--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etch-A-Sketch</title>
+  <title>Pixel Art</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div id="drawingBoard">Test Text</div>
+  <div id="drawingBoard">
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+  </div>
 
   <script src="javascript.js"></script>
 </body>
