Board can now be created with any size, has random colors on mouseover

--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
 </head>
 
 <body>
-  <div id="drawingBoard">
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-  </div>
+  <div id="drawingBoard"></div>
 
   <script src="javascript.js"></script>
 </body>
