Grid can be turned on and off, Generate grids of various sizes.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  <div id="drawingBoard"></div>
+  <button id="gridBtn">Turn Grid On/Off</button>
+  <input type="number" id="gridQuantity" name="gridQuantity" min="1" value="5">
+  <button id="gridQtyBtn">Generate Grid</button>
+  <div id="drawingBoard" class="grid"></div>
 
   <script src="javascript.js"></script>
 </body>
